--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
       otp_release: '21.3.8'
     - elixir: '1.9.0'
       otp_release: '22.0.4'
+    - elixir: '1.10.2'
+      otp_release: '22.0.4'
 
 cache:
   directories:
